Add style.css & html markup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <header>
+      <h1>Rock Paper Scissors</h1>
+    </header>
+    <main>
+      <h2>Choose your weapon</h2>
+      <h4>First player that gets points wins</h3>
+      <div class="btn-container">
+        <button class="btn">👊</button>
+        <button class="btn">✋</button>
+        <button class="btn">✌️</button>
+      </div>
+    </main>
+    <footer>@By Zakhar Aleksandruk</footer>
   </body>
+  <script src="index.js"></script>
 </html>
