--- a/index.html
+++ b/index.html
@@ -4,22 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="styles.css" rel="stylesheet"/>
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <header>
-      <h1>Rock Paper Scissors</h1>
+    <header class="header">
+      <h1 class="title">Rock Paper Scissors</h1>
     </header>
     <main>
-      <h2>Choose your weapon</h2>
-      <h4>First player that gets points wins</h3>
+      <div class="titles-container">
+        <h2 class="weapon-title">Choose your weapon</h2>
+        <h4 class="rule-title">First player that gets points wins</h3>
+      </div>
+      <div class="weapons-container">
+        <div>
+          <h1>❔</h1>
+          <h3>Players Weapon</h3>
+        </div>
+        <div>
+          <h1>❔</h1>
+          <h3>Computers weapon</h3>
+        </div>
+      </div>
       <div class="btn-container">
-        <button class="btn">👊</button>
-        <button class="btn">✋</button>
-        <button class="btn">✌️</button>
+        <button class="btn"><h1>👊</h1></button>
+        <button class="btn"><h1>✋</h1></button>
+        <button class="btn"><h1>✌️</h1></button>
       </div>
     </main>
-    <footer>@By Zakhar Aleksandruk</footer>
+    <footer class="footer">@By Zakhar Aleksandruk</footer>
   </body>
   <script src="index.js"></script>
 </html>
