--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
       </div>
       <div class="weapons-container">
         <div>
-          <h1>❔</h1>
+          <h1 class="player-weapon">❔</h1>
           <h3>Players Weapon</h3>
         </div>
         <div>
-          <h1>❔</h1>
+          <h1 class="computer-weapon">❔</h1>
           <h3>Computers weapon</h3>
         </div>
       </div>
       <div class="btn-container">
-        <button class="btn"><h1>👊</h1></button>
-        <button class="btn"><h1>✋</h1></button>
-        <button class="btn"><h1>✌️</h1></button>
+        <button weapon-data="👊" class="btn"><h1>👊</h1></button>
+        <button weapon-data="✋" class="btn"><h1>✋</h1></button>
+        <button weapon-data="✌️" class="btn"><h1>✌️</h1></button>
       </div>
     </main>
     <footer class="footer">@By Zakhar Aleksandruk</footer>
