--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <div class="titles-container">
         <h2 class="weapon-title">Choose your weapon</h2>
-        <h4 class="rule-title">First player that gets points wins</h3>
+        <h4 class="rule-title">First player that gets 5 points wins</h3>
       </div>
       <div class="weapons-container">
         <div>
