--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         <button weapon-data="✋" class="btn"><h1>✋</h1></button>
         <button weapon-data="✌️" class="btn"><h1>✌️</h1></button>
       </div>
+      <div class="play-again hidden">
+        <div class="play-again-container">
+          <h3 class="win"></h3>
+          <h3 class="countdown">Game will restart in</h1>
+        </div>
+      </div>
     </main>
     <footer class="footer">@By Zakhar Aleksandruk</footer>
   </body>
