Mobile fix & lighthouse optimization

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="styles.css" rel="stylesheet"/>
+    <meta name="description" content="Rock Paper Scissors">
+    <link href="minified.css" rel="stylesheet"/>
     <title>Rock Paper Scissors</title>
   </head>
   <body>
@@ -14,15 +15,15 @@
     <main>
       <div class="titles-container">
         <h2 class="weapon-title">Choose your weapon</h2>
-        <h4 class="rule-title">First player that gets 5 points wins</h3>
+        <h3 class="rule-title">First player that gets 5 points wins</h3>
       </div>
       <div class="weapons-container">
         <div>
-          <h1 class="player-weapon">❔</h1>
+          <h3 class="player-weapon">❔</h3>
           <h3>Players Weapon</h3>
         </div>
         <div>
-          <h1 class="computer-weapon">❔</h1>
+          <h3 class="computer-weapon">❔</h3>
           <h3>Computers weapon</h3>
         </div>
       </div>
