--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@
     </main>
     <footer class="footer">@By Zakhar Aleksandruk</footer>
   </body>
-  <script src="index.js"></script>
+  <script src="minified.js"></script>
 </html>
