--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Rock Paper Scissors">
-    <link href="minified.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet"/>
     <title>Rock Paper Scissors</title>
   </head>
   <body>
@@ -41,5 +41,5 @@
     </main>
     <footer class="footer">@By Zakhar Aleksandruk</footer>
   </body>
-  <script src="minified.js"></script>
+  <script src="index.js"></script>
 </html>
